force-app/main/default/objects/Board_Game_Rating__c/Board_Game_Rating__c.object-meta.xml
<CustomObject>
    <description>This Object holds information about Ratings Event Attendees submit for games they have played</description>
    <label>Board Game Rating</label>
    <nameField>
        <displayFormat>BGR-{000}</displayFormat>
        <label>Board Game Rating ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Game Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>