force-app/main/default/objects/Board_Game_Rating__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Event_Attendee__r.Attendee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>