force-app/main/default/objects/Board_Game_Rating__c/fields/Board_Game__c.field-meta.xml
<CustomField>
    <fullName>Board_Game__c</fullName>
    <description>Board Game Being Rated</description>
    <inlineHelpText>Board Game Being Rated</inlineHelpText>
    <label>Board Game</label>
    <referenceTo>Board_Games__c</referenceTo>
    <relationshipLabel>Board Game Ratings</relationshipLabel>
    <relationshipName>Board_Game_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>