force-app/main/default/objects/Board_Game_Rating__c/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Attendee</label>
    <referenceTo>Event_Attendee__c</referenceTo>
    <relationshipLabel>Board Game Ratings</relationshipLabel>
    <relationshipName>Board_Game_Ratings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>