force-app/main/default/objects/Board_Game_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Rating for Game on Scale of 1 to 5</description>
    <label>Rating</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>