force-app/main/default/objects/Board_Game_Rating__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <description>Detailed Review of Board Game</description>
    <inlineHelpText>Detailed Review of Board Game</inlineHelpText>
    <label>Review</label>
    <type>TextArea</type>
</CustomField>