force-app/main/default/objects/Board_Game_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Board_Game__c</columns>
    <columns>Attendee_Name__c</columns>
    <columns>Rating__c</columns>
    <columns>Is_Favorite__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>